# ImageProcessing

./: .gitignore  CMakeLists.txt  README.md
include/: header.h  image.h  imageprocessing.h  pixel.h
src/: image.cpp  imageprocessing.cpp  main.cpp  pixel.cpp
